--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,7 +3,7 @@
 
 
 body {
-  background-color: antiquewhite;
+  background-color: rgb(111, 63, 0);
   color: brown;
   text-align: center;
   margin-top: 100px;
