--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,8 +9,34 @@ body {
   margin-top: 100px;
 }
 
-.card {
+#card {
   max-width: 60%;
   margin: 15px;
   margin-left: auto;
+}
+
+#navigation {
+  position: absolute;
+  top: 0px;
+  width: 100%;
+}
+
+#filter-word {
+  display: flex;
+  margin-top: -10px;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+
+#wordBox {
+  width: 90%;
+  margin-top: -50px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: 25%;
+  justify-content: space-between;
+  row-gap: 50px ;
 }
