changed id in scss file

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -29,7 +29,7 @@ body {
   
 }
 
-#wordBox {
+#store {
   width: 90%;
   margin-top: -50px;
   margin-left: auto;
@@ -37,6 +37,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-basis: 25%;
-  justify-content: space-between;
+  justify-items: space-between;
   row-gap: 50px ;
 }
